# ichikas-auto-assistant

./: .gitignore  CLAUDE.md  README.md  build.py  iaa.spec  justfile  launch_api.py  launch_cli.py  launch_desktop.py  launch_web.py  pyproject.toml
.agents/skills/iaa-task-integration/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release-draft.yml
assets/help/: control.html  emulators-config.html  settings.html
doc/: CHANGELOG.md  LOCAL_RELEASE.md  gui_features.md
flutter_client/: README.md  pubspec.yaml
flutter_client/.dart_tool/: package_config.json  package_graph.json
flutter_client/lib/: main.dart
flutter_client/lib/api/: api_client.dart
flutter_client/lib/state/: app_state.dart
flutter_client/lib/ui/: home_page.dart
iaa/: __init__.py  consts.py  context.py  input.py  main.py  notify.py  progress.py  runtime.py  telemetry.py  utils.py
iaa/application/api/: app.py
iaa/application/cli/: index.py  setup.py
iaa/application/desktop/: index.py  scrcpy_viewer.py  tab_conf.py  tab_main.py
iaa/application/framework/: __init__.py
iaa/application/qt/: __init__.py  index.py  platform_win32.py
iaa/application/service/: assets_service.py  avd.py  config_service.py  help_service.py  iaa_service.py  scheduler.py  tab_session.py
iaa/application/web/: server.py
iaa/config/: base.py  live_presets.py  manager.py  migrations.py  schemas.py  shared.py
iaa/definitions/: consts.py  enums.py  errors.py
iaa/game_ui/: elements.py  list_view.py  scrollable.py  side_tabbar.py
iaa/game_ui/sekai/: camera.py  joystick.py
iaa/tasks/: _dump_item.py  _fragments.py  area_convos.py  cm.py  common.py  event_shop.py  gift.py  globals.py  mission_rewards.py  registry.py  start_game.py
iaa/tasks/live/: __init__.py  _scene.py  _select_song.py  auto_live.py  auto_live_core.py  challenge_live.py  live.py  solo_live.py  ten_songs.py
iaa/tasks/story/: _common.py  activity_story.py  main_story.py
resources/cn/common_dialog/: screenshot_award_claimed.png.json  screenshot_data_download.png.json  screenshot_tip_1.png.json  screenshot_tip_2.png.json
resources/cn/daily/: screenshot_task_bonus.png.json
resources/cn/live/: screenshot_7day_award_1.png.json  (+13 more)
tests/: test_cli.py  test_config_service.py  test_desktop_schema_framework.py  test_qt_auto_live.py  test_qt_progress.py  test_qt_settings.py  test_scrcpy_integration.py  test_scrcpy_viewer.py
tools/: make_resources.py  release_draft.py  release_publish.py
ui/: index.html  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx
(+232 files in other folders)
