[project]
name = "ichikas-auto-assistant"
version = "25.09b1"
description = """
Ichika's Auto Assistant is a helper script
for Project Sekai: Colorful Stage (JP server only)
that automates dailies.
"""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 目前 kotonebot 库依赖处理还有问题，因此只能 windows 也装上
    "kotonebot[android,windows]==0.2.0",
    "numpy<2.0",
    "onnxruntime==1.14.0",
    "psutil",
    "pydantic",
    "ttkbootstrap>=1.14.2",
]

[project.optional-dependencies]
dev = [
    "kotonebot[dev]",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pyinstaller>=6.15.0",
    "click"
]
