[project]
name = "ichikas-auto-assistant"
version = "26.02b1"
description = """
Ichika's Auto Assistant is a helper script
for Project Sekai: Colorful Stage (JP server only)
that automates dailies.
"""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kotonebot[android,windows]==0.8.0",
    "numpy<2.0",
    "onnxruntime==1.14.0",
    "psutil",
    "pydantic",
    "ttkbootstrap>=1.14.2",
]

[project.optional-dependencies]
dev = [
    "kotonebot[dev]",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pyinstaller>=6.15.0",
    "click",
    "ruff",
]

[tool.ruff.format]
quote-style = "single"

[tool.kotonebot.editor]
prefabs_module = "iaa.game_ui.elements"
resource_path = "resources/"

[tool.kotonebot.variant]                                                                                                                  
variants = ["tw"]
base = "jp"
path_pattern = "nest"