[project]
name = "ichikas-auto-assistant"
version = "26.03b2"
description = """
Ichika's Auto Assistant is a helper script
for Project Sekai: Colorful Stage (JP server only)
that automates dailies.
"""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kotonebot[android,windows]==0.11.0",
    "numpy<2.0",
    "onnxruntime==1.14.0",
    "psutil",
    "pydantic",
    "thefuzz>=0.22.1",
    "ttkbootstrap>=1.14.2",
]

[dependency-groups]
dev = [
    "kotonebot[dev]",
    "pyinstaller>=6.15.0",
    "click",
    "ruff",
]

[tool.ruff.format]
quote-style = "single"

[tool.kotonebot.editor]
prefabs_module = "iaa.game_ui.elements"
resource_path = "resources/"

[tool.kotonebot.variant]                                                                                                                  
variants = ["tw"]
base = "jp"
path_pattern = "nest"
